src/styles.css
/* brand colors */
:root {
    --black-purple: rgb(54, 22, 61);
    --dark-purple: #42244A;
    --cream: #F5E8C7;
    --sand: #ECCCB2;
    --rose: #AC7088;
    --peach: #DEB6AB;
    --off-white: rgba(255,255,255,0.8);
    --white: #FFFFFF;
}

/* global styles */
body {
    background-color: var(--black-purple);
}

h1 {
    font-size: 4rem;
}

h2 {
    font-size: 2rem;
}

h2.heading-text {
  font-weight: bold;
}

h3 {
    font-size: 1.55rem;
}

h3.subheading-text {
  text-decoration: underline;
}

h3 ul {
  text-align: left;
}


h4 {
    font-size: 1.35rem;
}

input, input[type="text"], input[type="email"] {
    height: 2.6rem;
    border-radius: .5rem;
}
input[type="email"] {
    display: inline-block;
}

button.button, a.button {
    margin: 0.5rem 0 0.5rem 0;
    padding: .85rem 2rem;
}

.button:hover, .button:focus {
    background-color: var(--white);
    color: var(--dark-purple);
    border: 1px solid;
    border-color: var(--dark-purple);
}

div.copy div.cell {
    padding: 0 2rem;
}

/* anchor offset */
a.link {
  color: var(--cream);
  text-decoration: underline;
}

a.anchor {
    display: block;
    position: relative;
    top: -100px;
    visibility: hidden;
}

/* button styles */
a.light-button {
    background-color: var(--cream);
    color: var(--dark-purple);
    border-radius: 30px;
}

a.clear.light-button {
    color: var(--cream);
}

a.dark-button {
    background-color: var(--dark-purple);
    color: var(--white);
    border-radius: 30px;
}

button.light-button {
    background-color: var(--cream);
    color: var(--dark-purple);
    border-radius: 30px; 
}

button.dark-button {
    background-color: var(--dark-purple);
    color: var(--white);
    border-radius: 30px;
}

a.button {
    font-size: 1.25rem;
    text-align: center;
    font-weight: bold;
    width: 100%;
    max-width: 30rem;
}

button.button {
    font-size: 1.15rem;
    text-align: center;
    font-weight: bold;
}

button.form-button {
    padding-top: 0.7rem;
    padding-bottom: 0.7rem;
}

/* sticky nav menu */
div.title-bar-right a.button {
    font-size: .9rem;
    border-radius: 20px;
}

div#menu {
    width:100%;
    background-color: var(--black-purple);
    color: var(--cream);
    padding: 20px;
}

div#menu a.button {
    margin: 0;
    width: auto;
}

div#menu img#app_icon_img {
    max-height: 50px;
}

div.title-bar-left {
    font-size: 1.5rem;
    margin-left: 0.5rem;
}

div.app-icon-box {
    display: flex;
    align-items: center;
    justify-content: center;
}

/* section: hero */
div#hero {
    background-color: #42244A;
    padding: 2rem 0px 3rem 0px;
}

div#hero div.image {
    text-align: center;
}

div#hero h1 {
    color: var(--cream);
    padding-bottom: 2rem;
    line-height: 1.25;
}

div#hero h3 {
    color: var(--off-white);
    line-height: 1.68;
    padding-bottom: 3rem;
}

div#hero img#hero_img {
    max-height: 650px;
}

div#hero h4 {
    text-align: center;
    color: var(--off-white);
}

div#hero form button {
    margin-bottom: 2rem;
}

/* section: supported apps */
div#supported-apps {
    background-color: var(--white);
    color: var(--dark-purple);
    padding: 3rem 0;
}

div#supported-apps {
    text-align: center;
}

div#supported-apps img#supported_apps_img {
    max-height: 5rem;
}

div#supported-apps h4{
    text-align: center;
}

form#supported-apps {
    display: flex;
    align-items: center;
    justify-content: center;
}

form#supported-apps input {
    max-width: 20rem;
    margin: 0 1rem;
}

/* section: import */
div#import {
    background-color: var(--cream);
    color: var(--dark-purple);
    padding: 100px 0px 100px 0px;
}

div#import div.image {
    text-align: center;
}

div#import img#import_img {
    max-height: 400px;
}

/* section: privacy */
div#privacy {
  background-color: var(--rose);
  color: var(--white);
  padding: 100px 0px 100px 0px;

}

/* section: calendar */
div#calendar {
    background-color: var(--white);
    color: var(--dark-purple);
    padding: 100px 0px 100px 0px;
}

div#calendar div.image {
    text-align: center;
}

div#calendar img#calendar_img {
    max-height: 400px;
}

/* section: search */
div#search {
    background-color: var(--rose);
    color: var(--off-white);
    padding: 100px 0px 100px 0px;
}

div#search h2.heading-text {
  margin-top: 25px;
}

div#search div.image {
    text-align: center;
}

div#search img#search_img {
    max-height: 500px;
    border-radius: 50px;
}

/* section: movie view */
div#movie-view {
    background-color: var(--white);
    color: var(--dark-purple);
    padding: 100px 0px 100px 0px;
}

div#movie-view div.image {
    text-align: center;
}

div#movie-view img#movie-view {
    max-height: 400px;
}

/* section: sign up */
div#sign-up {
    background-color: var(--cream);
    color: var(--dark-purple);
    padding: 100px 0px 100px 0px;
    text-align: center;
}

div#sign-up h2{
    padding-bottom: 30px;
}

div#sign-up input{
    max-width: 400px;
}

/* section: footer */
div#footer {
  background-color: var(--dark-purple);
  color: var(--cream);
  padding: 100px 0px 100px 0px;
  text-align: center;
}

div#social-icons {
  padding: 1rem;
}

img.footer-social-icon {
  height: 20px;
  padding: 0 3px;
}

div#footer-text {
  font-size: .9rem;
}

@media screen and (max-width: 40rem) {
    form#supported-apps input {
        max-width: 100%;
        margin-bottom: 1rem;
    }
}

@media screen and (max-width: 64rem) {
    /* global styles */
    h1 {
        font-size: 2rem;
    }
    
    h3 {
        font-size: 1.5rem;
    }
    
    h4 {
        font-size: 1.25rem;
    }

    .grid-container {
        max-width: 45rem;
    }
    
    .button {
        font-size: 1.1rem;
    }

    div.copy h3 {
        line-height:1.5;
    }
    
    /* section: hero */
    div#hero div.copy {
        padding: 0 3rem 0 3rem;
    }

    div#hero div.copy h1 {
        padding-bottom: 1rem;
    }

    div#hero div.copy h3 {
        padding-bottom: 2rem;
    }

    /* all sections */
    div.grid-y {
        text-align: center;
    }
    
    /* section: import */
    div#import div.image {
        margin-bottom: 3rem;
    }

    /* section: calendar */
    div#calendar div.image.hide-for-large {
        margin-bottom: 3rem;
    }

    div#movie-view div.image {
        margin-bottom: 3rem;
    }

    /* section: supported apps */
    form#supported-apps {
        display: flex;
        flex-flow: row wrap;
        align-items: center;
        justify-content: center;
    }
}

